fix view on tablet

--- a/themes/apotica-theme/source/_css/main.css
+++ b/themes/apotica-theme/source/_css/main.css
@@ -4367,7 +4367,7 @@ margin-bottom: 70px;
 }
 
 /* override .app-dynamics hero for small resolutions  */
-@media only screen and (min-width:980px)  and (max-width: 1366px){
+@media only screen and (min-width:900px)  and (max-width: 1366px){
 	/* body {
 		background: red;
 	} */
